# chertogon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GAME_DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml
assets/models/enemies/: upyr_merged.glb
assets/models/environment/: portal_fire.glb  torch.glb
assets/shaders/: ground_fog.wgsl  portal_vortex.wgsl  stylized_pbr.wgsl
scripts/: merge_animation.mjs  merge_leshiy_anims.mjs  merge_volkolak_anims.mjs  normalize_volkolak.mjs
src/: lib.rs  main.rs
src/config/: game_config.rs
src/modules/: mod.rs
src/modules/camera/: components.rs  mod.rs  plugin.rs
src/modules/camera/parts/: follow_system.rs  menu_camera.rs  mod.rs  setup.rs
src/modules/combat/: components.rs  mod.rs  plugin.rs
src/modules/combat/parts/: auto_attack.rs  blood_decals.rs  bloody_footprints.rs  camera_shake.rs  damage_numbers.rs  damage_vignette.rs  enemy_damage.rs  game_over.rs  game_timer.rs  haptic.rs  hit_flash.rs  hit_particles.rs  hitstop.rs  impact_flash.rs  knockback.rs  mod.rs  slash_vfx.rs  vfx_assets.rs
src/modules/enemies/: components.rs  mod.rs  plugin.rs
src/modules/enemies/parts/: ai.rs  animation.rs  attack_slots.rs  cleanup.rs  debug_spawn.rs  lod.rs  mod.rs  portal_spawn.rs  portal_vfx.rs  preload.rs  separation.rs  spatial_grid.rs  spawner.rs
src/modules/input/: mod.rs  plugin.rs
src/modules/input/data/: input_state.rs
src/modules/input/handlers/: keyboard.rs  mod.rs  touch.rs
src/modules/input/parts/: auto_play.rs  mod.rs  tap_ripple.rs  touch_joystick.rs
src/modules/menu/: components.rs  mod.rs  plugin.rs
src/modules/menu/parts/: adaptive_scale.rs  button_hover.rs  edge_indicators.rs  fade_transition.rs  font_diagnostics.rs  fps_counter.rs  game_over_screen.rs  hud.rs  kill_feed.rs  loading_screen.rs  minimap.rs  mod.rs  (+3 more)
src/modules/player/: components.rs  mod.rs  plugin.rs
src/modules/progression/: components.rs  mod.rs  plugin.rs
src/modules/selection/: components.rs  mod.rs  plugin.rs
src/modules/world/: mod.rs  plugin.rs
src/shared/: constants.rs  game_state.rs  mod.rs  rng.rs
src/toolkit/: asset_paths.rs  mod.rs
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/game/: chertogon-9066add3c2a345fd.js  index.html
web/src/: App.tsx  index.css
web/src/shared/: constants.ts
web/src/toolkit/: animations.ts  index.ts
(+51 files in other folders)
