[package]
name = "chertogon"
version = "0.1.0"
edition = "2021"
description = "3D top-down roguelike arena shooter on Bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.18", features = ["jpeg"] }
avian3d = { version = "0.6.0-rc.1", features = ["f32"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-inspector-egui = "0.36"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Window", "Navigator"] }
wasm-bindgen = "0.2"

[features]
default = []
native = ["bevy/dynamic_linking"]
webgpu = ["bevy/webgpu"]
remote_debug = ["bevy/bevy_remote"]
tracy = ["bevy/trace_tracy"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
panic = "abort"
